Fix doc page overflow Closes #46

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,20 @@
     height: 40px;
 }
 
+.fa {
+    cursor: default;
+}
+
+.page-content {
+    padding: 10px;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.page-content img {
+    max-width: 100%;
+}
+
 body {
     background-color: #f3f2f0;
 }
